[package]
name = "ckb-binary-patcher"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
clap = "2.33.0"
ckb-vm = "0.18.1"
ckb-vm-definitions = "0.18.1"
goblin = "0.0.24"
